kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /foo/?(.*)
            backend:
              serviceName: kube-foo-svc
              servicePort: 80
          - path: /bar/?(.*)
            backend:
              serviceName: kube-bar-svc
              servicePort: 80
